FIxed description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crm-stub-service",
   "version": "1.0.0",
-  "description": "CRM-stub service that stores and serves the ATF data",
+  "description": "CRM-stub service that stores and serves the preparers data",
   "main": "handler.js",
   "scripts": {
     "start": "npm run eslint && serverless offline start",
