--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "expect": "^21.2.1",
     "mocha": "^4.0.1",
     "supertest": "^3.0.0",
-    "swagger": "^0.7.5",
     "swagger-ui-watcher": "^2.1.5"
   },
   "devDependencies": {
@@ -36,5 +35,9 @@
     "serverless-offline": "^3.27.0",
     "serverless-openapi-documentation": "^0.4.0",
     "standard": "^12.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dvsa/cvs-svc-preparers-mock.git"
   }
 }
