--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.332.0",
-    "expect": "^21.2.1",
-    "mocha": "^4.0.1",
-    "supertest": "^3.0.0",
-    "swagger-ui-watcher": "^2.1.5"
+    "aws-sdk": "^2.332.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
@@ -34,7 +30,11 @@
     "serverless": "^1.23.0",
     "serverless-offline": "^3.27.0",
     "serverless-openapi-documentation": "^0.4.0",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "expect": "^21.2.1",
+    "mocha": "^4.0.1",
+    "supertest": "^3.0.0",
+    "swagger-ui-watcher": "^2.1.5"
   },
   "repository": {
     "type": "git",
