--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.332.0"
+    "aws-sdk": "^2.332.0",
+    "chai": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
@@ -27,12 +28,12 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "expect": "^21.2.1",
+    "mocha": "^4.1.0",
     "serverless": "^1.23.0",
     "serverless-offline": "^3.27.0",
     "serverless-openapi-documentation": "^0.4.0",
     "standard": "^12.0.1",
-    "expect": "^21.2.1",
-    "mocha": "^4.0.1",
     "supertest": "^3.0.0",
     "swagger-ui-watcher": "^2.1.5"
   },
