--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.332.0",
-    "chai": "^4.2.0"
+    "aws-sdk": "^2.332.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
@@ -35,7 +34,8 @@
     "serverless-openapi-documentation": "^0.4.0",
     "standard": "^12.0.1",
     "supertest": "^3.0.0",
-    "swagger-ui-watcher": "^2.1.5"
+    "swagger-ui-watcher": "^2.1.5",
+    "chai": "^4.2.0"
   },
   "repository": {
     "type": "git",
