--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "handler.js",
   "scripts": {
     "start": "npm run eslint && serverless offline start",
+    "start:test": "npm run eslint && node_modules/gulp/bin/gulp.js start-serverless",
+    "end:test": "node_modules/gulp/bin/gulp.js kill-serverless",
     "test": "node_modules/.bin/mocha tests/**/*.unitTest.js",
     "test-i": "node_modules/.bin/mocha tests/**/*.intTest.js",
     "tests": "npm run test && sls offline start > /dev/null 2>&1 & sleep 4 && npm run test-i && kill %1",
@@ -20,6 +22,7 @@
     "aws-sdk": "^2.332.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -28,14 +31,14 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "expect": "^21.2.1",
+    "gulp": "^4.0.0",
     "mocha": "^4.1.0",
     "serverless": "^1.23.0",
     "serverless-offline": "^3.27.0",
     "serverless-openapi-documentation": "^0.4.0",
     "standard": "^12.0.1",
     "supertest": "^3.0.0",
-    "swagger-ui-watcher": "^2.1.5",
-    "chai": "^4.2.0"
+    "swagger-ui-watcher": "^2.1.5"
   },
   "repository": {
     "type": "git",
