--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.332.0"
+    "aws-sdk": "^2.405.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.14.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0",
@@ -34,12 +34,11 @@
     "expect": "^21.2.1",
     "gulp": "^4.0.0",
     "mocha": "^4.1.0",
-    "serverless": "^1.23.0",
-    "serverless-offline": "^3.27.0",
-    "serverless-openapi-documentation": "^0.4.0",
+    "serverless": "^1.37.1",
+    "serverless-dynamodb-local": "0.2.35",
+    "serverless-offline": "^3.33.0",
     "standard": "^12.0.1",
-    "supertest": "^3.0.0",
-    "swagger-ui-watcher": "^2.1.5"
+    "supertest": "^3.4.2"
   },
   "repository": {
     "type": "git",
