--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "crm-stub-service",
+  "name": "cvs-svc-preparers",
   "version": "1.0.0",
-  "description": "CRM-stub service that stores and serves the preparers data",
+  "description": "Microservice that stores and serves the preparers data",
   "main": "handler.js",
   "scripts": {
-    "start": "npm run eslint && serverless offline start",
+    "start": "npm run eslint && BRANCH=local ./node_modules/serverless/bin/serverless offline start",
     "start:test": "npm run eslint && node_modules/gulp/bin/gulp.js start-serverless",
     "end:test": "node_modules/gulp/bin/gulp.js kill-serverless",
     "test": "node_modules/.bin/mocha tests/**/*.unitTest.js",
@@ -13,9 +13,9 @@
     "prepush": "npm test && npm run eslint",
     "predeploy": "npm install && npm run prepush",
     "security-checks": "git secrets --scan && git log -p | scanrepo",
-    "eslint": "eslint . --config=.eslintrc.json --fix",
-    "generate-docs": "serverless openapi generate -o api/swagger/swagger.yaml && swagger-ui-watcher ./api/swagger/swagger.yaml",
-    "sonar-scanner": "echo 'TODO'"
+    "eslint": "eslint . --config=.eslintrc.json --fix  -f json -o report.json",
+    "sonar-scanner": "npm run eslint && npm run coverage && sonar-scanner",
+    "coverage": "nyc mocha tests/unit/*.unitTest.js && nyc report --reporter=lcov"
   },
   "author": "",
   "license": "MIT",
@@ -31,14 +31,15 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "expect": "^21.2.1",
+    "expect": "^24.1.0",
     "gulp": "^4.0.0",
     "mocha": "^4.1.0",
     "serverless": "^1.37.1",
     "serverless-dynamodb-local": "0.2.35",
     "serverless-offline": "^3.33.0",
     "standard": "^12.0.1",
-    "supertest": "^3.4.2"
+    "supertest": "^3.4.2",
+    "nyc": "^13.3.0"
   },
   "repository": {
     "type": "git",
