--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
     "plugins": [
         "mocha"
       ],
-      "rules": {
-        "mocha/no-exclusive-tests": "error"
-      }
+    "rules": {
+      "mocha/no-exclusive-tests": "error"
+    },
+    "env": {
+      "mocha": true
+    }
 }
