--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "eslint-plugin-standard": "^4.0.0",
     "expect": "^24.1.0",
     "gulp": "^4.0.0",
+    "lambda-tester": "^3.5.0",
     "mocha": "^4.1.0",
+    "nyc": "^13.3.0",
     "serverless": "^1.37.1",
     "serverless-dynamodb-local": "0.2.35",
     "serverless-offline": "^3.33.0",
     "standard": "^12.0.1",
-    "supertest": "^3.4.2",
-    "nyc": "^13.3.0"
+    "supertest": "^3.4.2"
   },
   "repository": {
     "type": "git",
