--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.405.0"
+    "aws-sdk": "^2.405.0",
+    "aws-xray-sdk": "^2.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -39,6 +40,7 @@
     "serverless": "^1.37.1",
     "serverless-dynamodb-local": "0.2.35",
     "serverless-offline": "^3.33.0",
+    "serverless-plugin-tracing": "^2.0.0",
     "standard": "^12.0.1",
     "supertest": "^3.4.2"
   },
