--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,14 @@ plugins:
 provider:
   name: aws
   runtime: nodejs8.10
+  tracing: true # enable tracing
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "xray:PutTraceSegments"
+        - "xray:PutTelemetryRecords"
+      Resource:
+        - "*"
 
 functions:
   getPreparers:
