--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "security-checks": "git secrets --scan && git log -p | scanrepo",
     "eslint": "eslint . --config=.eslintrc.json --fix  -f json -o report.json",
     "sonar-scanner": "npm run eslint && npm run coverage && sonar-scanner",
-    "coverage": "nyc mocha tests/**/*.*Test.js && nyc report --reporter=lcov",
+    "coverage": "nyc mocha tests/unit/*.unitTest.js && nyc report --reporter=lcov",
     "audit-dep": "npm audit --json | audit-filter --nsp-config=.nsprc --audit=-"
   },
   "author": "",
