CVSB-3329 - Preparers TS Migration + jest + extended unit testing

--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ plugins:
   - serverless-dynamodb-local
   - serverless-offline
   - serverless-plugin-tracing
+  - serverless-plugin-typescript
 
 provider:
   name: aws
@@ -43,6 +44,9 @@ custom:
         sources:
         - table: cvs-local-preparers
           sources: [./tests/resources/preparers.json]
+    stages:
+      - dev
+      - test
 
 resources:
   Resources:
