--- a/package.json
+++ b/package.json
@@ -4,47 +4,93 @@
   "description": "Microservice that stores and serves the preparers data",
   "main": "handler.js",
   "scripts": {
-    "start": "npm run eslint && BRANCH=local ./node_modules/serverless/bin/serverless offline start",
-    "start:test": "npm run eslint && node_modules/gulp/bin/gulp.js start-serverless",
+    "start": "npm run tslint && BRANCH=local ./node_modules/serverless/bin/serverless offline start",
+    "start:test": "npm run tslint && node_modules/gulp/bin/gulp.js start-serverless",
     "end:test": "node_modules/gulp/bin/gulp.js kill-serverless",
-    "test": "node_modules/.bin/mocha tests/**/*.unitTest.js",
-    "test-i": "node_modules/.bin/mocha tests/**/*.intTest.js",
+    "build": "node_modules/typescript/bin/tsc --rootDir ./ --outDir .build --sourceMap false && npm run build:copy",
+    "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find tests -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build",
+    "test": "BRANCH=local SLS_DEBUG=* jest --testMatch=\"**/*.unitTest.ts\" --coverage",
+    "test-i": "BRANCH=local jest --testMatch=\"**/*.intTest.ts\"",
     "tests": "npm run test && sls offline start > /dev/null 2>&1 & sleep 4 && npm run test-i && kill %1",
-    "prepush": "npm test && npm run eslint",
+    "prepush": "npm test && npm run tslint",
     "predeploy": "npm install && npm run prepush",
     "security-checks": "git secrets --scan && git log -p | scanrepo",
-    "eslint": "eslint . --config=.eslintrc.json --fix  -f json -o report.json",
-    "sonar-scanner": "npm run eslint && npm run coverage && sonar-scanner",
-    "coverage": "nyc mocha tests/unit/*.unitTest.js && nyc report --reporter=lcov",
+    "tslint": "tslint src/**/*.ts tests/**/*.ts -q --fix",
+    "sonar-scanner": "npm run tslint && npm run coverage && sonar-scanner",
+    "coverage": "BRANCH=local SLS_DEBUG=* jest --testMatch=\"**/*.*Test.ts\" --coverage",
     "audit-dep": "npm audit --json | audit-filter --nsp-config=.nsprc --audit=-"
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "aws-sdk": "^2.405.0",
-    "aws-xray-sdk": "^2.3.2"
+  "nyc": {
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.tsx"
+    ],
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/chai": "^4.1.7",
+    "@types/jest": "^24.0.15",
+    "@types/jest-plugin-context": "^2.9.2",
+    "@types/lambda-tester": "^3.5.1",
+    "@types/node": "^10.14.9",
+    "@types/request": "^2.48.1",
+    "@types/sinon": "^7.0.13",
+    "@types/supertest": "^2.0.8",
     "audit-filter": "^0.4.3",
+    "aws-lambda-mock-context": "^3.2.1",
+    "babel-jest": "^24.8.0",
     "chai": "^4.2.0",
     "eslint": "^5.14.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "expect": "^24.1.0",
     "gulp": "^4.0.0",
+    "jest": "^24.8.0",
+    "jest-plugin-context": "^2.9.0",
     "lambda-tester": "^3.5.0",
-    "mocha": "^4.1.0",
     "nyc": "^14.1.1",
     "serverless": "^1.42.3",
-    "serverless-dynamodb-local": "^0.2.37",
+    "serverless-dynamodb-local": "^0.2.38",
     "serverless-offline": "^3.33.0",
     "serverless-plugin-tracing": "^2.0.0",
+    "serverless-plugin-typescript": "^1.1.9",
+    "sinon": "^7.3.2",
     "standard": "^12.0.1",
-    "supertest": "^3.4.2"
+    "supertest": "^3.4.2",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "tslint-jsdoc-rules": "^0.1.3",
+    "tslint-no-unused-expression-chai": "^0.1.4",
+    "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.405.0",
+    "aws-xray-sdk": "^2.3.2",
+    "node-yaml": "^3.2.0",
+    "path-parser": "^4.2.0",
+    "reflect-metadata": "^0.1.13"
   },
   "repository": {
     "type": "git",
