CVSB-9150 - fix Sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,9 +12,6 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set.
 sonar.sources=src
 sonar.exclusions= .dynamodb/*, .nyc_output/*, .scannerwork/*, coverage/*, Jenkinsfile/*
-sonar.tests=tests
-sonar.test.inclusions=**/*.unitTest.js, **/*.initTest.js
-sonar.eslint.reportPaths=report.json
-sonar.js.eslintconfigpath=.eslintrc.json
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.ts.tslintconfigpath=tslint.json
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
