--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "gulp": "^4.0.2",
     "jest": "^24.8.0",
     "jest-plugin-context": "^2.9.0",
+    "jest-sonar-reporter": "^2.0.0",
     "lambda-tester": "^3.6.0",
     "nyc": "^14.1.1",
     "serverless": "^1.52.2",
@@ -86,5 +87,16 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/dvsa/cvs-svc-preparers-mock.git"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage",
+    "collectCoverage": true,
+    "testResultsProcessor": "jest-sonar-reporter",
+    "testURL": "http://localhost"
+  },
+  "jestSonar": {
+    "reportPath": ".reports",
+    "reportFile": "test-report.xml",
+    "indent": 4
   }
 }
