--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run security-checks"
+      "pre-commit": "npm run prepush && npm run security-checks"
     }
   }
 }
