--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "BRANCH=local SLS_DEBUG=* jest --testMatch=\"**/*.unitTest.ts\"",
     "test-i": "BRANCH=local jest --testMatch=\"**/*.intTest.ts\"",
     "tests": "npm run test && sls offline start > /dev/null 2>&1 & sleep 4 && npm run test-i && kill %1",
-    "prepush": "npm run tslint && npm run coverage",
+    "prepush": "npm run coverage",
     "predeploy": "npm install && npm run prepush",
     "security-checks": "git secrets --scan && git log -p | scanrepo",
     "tslint": "tslint src/**/*.ts tests/**/*.ts -q --fix",
@@ -105,7 +105,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run security-checks && npm run tslint && npm run build",
-      "pre-push": "prepush"
+      "pre-push": "npm run prepush"
     }
   }
 }
